# OpenGL-Template

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp
src/classes/: Classes.h  ElementBufferObject.cpp  ElementBufferObject.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferObject.cpp  VertexBufferObject.h  debug.cpp  debug.h
src/glad/: glad.c  glad.h
